--- a/styles/style.css
+++ b/styles/style.css
@@ -17,4 +17,396 @@
 .page {
   min-inline-size: 320px;
   min-block-size: 100dvb;
+  padding-top: 100px;
+  font-family: var(--main-font), sans-serif;
+  font-variation-settings: 'wgth' var(--main-card-font-weight);
+  color: var(--accent-color);
+  font-size: 18px;
+  background-image: var(--background-image);
+  background-size: cover;
+  background-attachment: fixed; 
+}
+
+@supports (font-variation-settings: normal) {
+  .page {
+      font-family: 'Inter-Variable', sans-serif;
+      font-size: var(--font-size);
+  }
+} 
+
+.header {
+  width: min(698px, 99%);
+  padding: 136px 0 15px 0;
+  background-color: var(--background-color);
+  margin: 0 auto 100px auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-family: var(--accent-font, fantasy);
+  color: var(--accent-color);
+  border: 2px solid var(--accent-color);
+}
+
+.p {
+  font-size: clamp(3.0625rem, 0rem + 14.2857vw, 4.0625rem);
+  margin-bottom: 20px;
+}
+
+.title__header {
+  font-size: clamp(0.875rem, 0rem + 6.6667vw, 1.4375rem);
+  margin-bottom: 22px;
+  text-transform: uppercase;
+}
+
+.theme-menu__button {
+  position: relative;
+  margin: 0 0 7px 19px;
+  text-transform: uppercase;
+  border: none;
+  outline: none;
+  background-color: transparent;
+  font-size: 14px;
+  transition: all 0.3s ease;
+}
+
+.theme-menu__button:before {
+  content: "▶";
+  font-size: 14px;
+  position: absolute;
+  left: -18px;
+  color: transparent;
+  animation: pulse 1s infinite ease-in-out;
+}
+
+.theme-menu__button:disabled:before {
+  color: var(--accent-color);
+}
+
+.theme-menu__button:hover {
+  cursor: pointer;
+  opacity: 0.6;
+}
+
+.theme-menu__button:disabled {
+  opacity: 0.6;
+  pointer-events: none;
+}
+
+.theme-menu__button:after {
+  content: '';
+  display: block;
+  width: 0%;
+  height: 2px;
+  background-color: var(--accent-color);
+  transition: all 0.5s;
+}
+
+.theme-menu__button:focus-visible::after {
+  width: 100%;
+}
+
+.theme-menu__button:focus {
+  outline: none;
+  opacity: 0.6;
+}
+
+.card__item {
+  width: min(698px, 99%);
+  background-color: var(--background-color);
+  margin: 0 auto 51px auto;
+  border: 2px solid var(--accent-color);
+}
+
+.card__title {
+  font-size: 18px;
+  padding: 5px 10px;
+  border-bottom: 2px solid var(--accent-color);
+}
+
+.card__item_watermark__and__img{
+  position: relative;
+}
+
+
+.card__item_watermark {
+  position: absolute;
+  top: 25px;
+  right: 25px;
+  opacity: 0.5;
+  font-size: 14px;
+  font-family: var(--accent-font, sans-serif);
+  mix-blend-mode: hard-light;
+  text-shadow: -1px 0 var(--label-line-color), 0 1px var(--label-line-color), 1px 0 var(--label-line-color), 0 -1px var(--label-line-color);
+}
+
+.card__item_img {
+  width: 100%;
+  display: block;
+}
+
+.card__item__text {
+  border-top: 2px solid var(--accent-color);
+}
+
+.card__text {
+  margin: 26px;
+}
+
+.card__button {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  margin: 25px;
+}
+
+.like-icon {
+  width: 39px;
+  height: 36px;
+  background-color: transparent;
+  border: none;
+  outline: none;
+  padding: 0;
+}
+
+.card__like-button,
+.window__button {
+  position: relative;
+  cursor: pointer;
+  width: 130px;
+  height: 38px;
+  border: 2px solid var(--accent-color);
+  background-color: transparent;
+  font-family: var(--accent-font);
+  font-size: 14px;
+  transition: all 0.5s;
+}
+
+.card__like-button::before,
+.button__save__memory:before,
+.window__button:before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 0;
+  height: 100%;
+  background-color: var(--accent-color);
+  transition: 0.5s ease-in-out;
+}
+
+.button__text {
+  color: var(--color-button-text);
+  mix-blend-mode: difference;
+}
+
+.card__icon-button {
+  cursor: pointer;
+  outline: none;
+  background-color: var(--background-color);
+  height: 38px;
+  display: flex;
+  border: 2px solid transparent;
+  align-items: center;
+  justify-content: center;
+  transition: border .3s ease;
+}
+
+.card__icon-button:focus-visible {
+  border-color: var(--accent-color);
+}
+
+.card__icon-button:focus {
+  outline: none;
+}
+
+.card__like-button:focus,
+.button__save__memory:focus {
+  outline: none;
+  box-shadow: 2px 2px 0px 0px var(--accent-color);
+}
+
+.card__like-button:hover:before,
+.button__save__memory:hover:before, 
+.window__button:hover:before {
+  width: 100%;
+}
+
+.card__icon-button:hover .main-body {
+  fill: var(--accent-color);
+  transition: fill 0.3s linear 0.3s;
+}
+
+.card__icon-button:hover .core {
+  fill: var(--accent-color);
+  transition: fill 0.3s linear;
+}
+
+.card__icon-button:active .main-body {
+  fill: var(--color-body-heart);
+  transition: fill 0.3s linear 0.3s;
+}
+
+.card__icon-button:active .core {
+  fill: var(--color-body-heart);
+  transition: fill 0.3s linear;
+}
+
+.like-icon.is-liked .main-body {
+  fill: var(--color-body-heart);
+  transition: fill 0.3s linear 0.05s; 
+}
+
+.like-icon.is-liked .core {
+  fill: var(--color-body-heart);
+  transition: fill 0.3s linear;
+}
+
+.like-icon.is-liked .contour {
+  fill: var(--color-body-heart);
+  transition: fill 0.3s linear 0.06s;
+}
+
+.is-liked .heart {
+  animation: like-scale 0.3s ease-in 0.1s alternate;
+}
+
+.is-liked .sparks {
+  animation: like-sparks  0.3s ease-in 0.3s alternate;
+}
+
+.button__save__memory {
+  position: relative;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  cursor: pointer;
+  width: 335px;
+  height: 55px;
+  margin: 0 auto 100px;
+  background-color: var(--background-color);
+  outline: none;
+  border: 2px solid var(--accent-color);
+  font-family: var(--accent-font);
+  font-size: 14px;
+}
+
+.floppy__img {
+  width: 21px;
+  height: 21px;
+  fill: var(--color-button-text);
+  mix-blend-mode:difference;
+}
+
+.window {
+  width: 357px;
+  background-color: var(--background-color);
+  font-family: var(--accent-font), sans-serif;
+  font-size: 14px;
+  padding: 30px;
+  border: 2px solid var(--accent-color);
+}
+
+.window_dialog {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.window__img {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.window__text{
+  display: block;
+  margin-left: 20px;
+  line-height: 150%;
+  text-transform: uppercase;
+  color: var(--accent-color);
+}
+
+.window__floppy__img {
+  fill: var(--accent-color);
+  width: 80px;
+  height: 40px;
+}
+
+.window__button {
+  width: 293px;
+  height: 38px;
+  margin-top: 30px;
+}
+
+@media (width <= 375px) {
+  .page {
+    min-height: 100vh;
+  }
+  .header {
+    padding-top: 120px;
+  }
+  
+  .p {
+    font-size: 49px;
+  }
+  
+  .title__header {
+    font-size: 14px;
+  }
+
+  h1 {
+    font-size: 14px;
+  }
+
+  h2 {
+    line-height: 1.2;
+  }
+
+  .button__save__memory {
+    flex-direction: column;
+    width: 306px;
+    height: 80px;
+    padding: 15px 0;
+    justify-content: space-between;
+  }
+
+  .floppy__img {
+    width: 40px;
+    height: 40px;
+    margin-bottom: 8px;
+  }
+}
+
+dialog::backdrop {
+  background-color: rgb(0 0 0 / 0.8);
+}
+
+.image2 {
+  filter: grayscale(80%);
+}
+
+.image3 {
+  filter: saturate(500%) grayscale(50%);
+}
+
+.image4 {
+  filter: invert(100%);
+}
+
+.image5 {
+  filter: sepia(0.8);
+}
+
+.image6 {
+  filter: hue-rotate(0.5turn);
+}
+
+.image7 {
+  filter: contrast(300%) grayscale(20%) blur(5px);
+}
+
+.image8 {
+  filter: saturate(30%) invert(20%) contrast(200%) hue-rotate(100deg) brightness(80%);
 }
