--- a/styles/style.css
+++ b/styles/style.css
@@ -24,7 +24,7 @@
   font-size: 18px;
   background-image: var(--background-image);
   background-size: cover;
-  background-attachment: fixed; 
+  background-attachment: fixed;
 }
 
 @supports (font-variation-settings: normal) {
@@ -43,7 +43,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-family: var(--accent-font, fantasy);
+  font-family: var(--accent-font, sans-serif);
   color: var(--accent-color);
   border: 2px solid var(--accent-color);
 }
@@ -124,7 +124,7 @@
   border-bottom: 2px solid var(--accent-color);
 }
 
-.card__item_watermark__and__img{
+.card__item_watermark__and__img {
   position: relative;
 }
 
@@ -138,6 +138,15 @@
   font-family: var(--accent-font, sans-serif);
   mix-blend-mode: hard-light;
   text-shadow: -1px 0 var(--label-line-color), 0 1px var(--label-line-color), 1px 0 var(--label-line-color), 0 -1px var(--label-line-color);
+  z-index: 10;
+}
+
+@supports((text-stroke: 1px var(--label-line-color)) or (-webkit-text-stroke: 1px var(--label-line-color))) {
+  .card__item_watermark {
+      -webkit-text-stroke: 1px var(--label-line-color);
+      text-stroke: 1px var(--label-line-color);
+      text-shadow: none;
+  }
 }
 
 .card__item_img {
@@ -254,7 +263,7 @@
 
 .like-icon.is-liked .main-body {
   fill: var(--color-body-heart);
-  transition: fill 0.3s linear 0.05s; 
+  transition: fill 0.3s linear 0.05s;
 }
 
 .like-icon.is-liked .core {
@@ -320,7 +329,7 @@
   align-items: center;
 }
 
-.window__text{
+.window__text {
   display: block;
   margin-left: 20px;
   line-height: 150%;
@@ -392,7 +401,7 @@ dialog::backdrop {
 }
 
 .image4 {
-  filter: invert(100%);
+  filter: invert(60%);
 }
 
 .image5 {
