--- a/styles/style.css
+++ b/styles/style.css
@@ -43,7 +43,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-family: var(--accent-font, sans-serif);
+  font-family: var(--accent-font, fantasy);
   color: var(--accent-color);
   border: 2px solid var(--accent-color);
 }
@@ -51,6 +51,7 @@
 .p {
   font-size: clamp(3.0625rem, 0rem + 14.2857vw, 4.0625rem);
   margin-bottom: 20px;
+  text-transform: uppercase;
 }
 
 .title__header {
@@ -122,6 +123,7 @@
   font-size: 18px;
   padding: 5px 10px;
   border-bottom: 2px solid var(--accent-color);
+  font-variation-settings: 'wgth' var(--header-font-weight);
 }
 
 .card__item_watermark__and__img {
@@ -135,10 +137,11 @@
   right: 25px;
   opacity: 0.5;
   font-size: 14px;
-  font-family: var(--accent-font, sans-serif);
+  font-family: var(--accent-font, fantasy);
   mix-blend-mode: hard-light;
   text-shadow: -1px 0 var(--label-line-color), 0 1px var(--label-line-color), 1px 0 var(--label-line-color), 0 -1px var(--label-line-color);
   z-index: 10;
+  text-transform: uppercase;
 }
 
 @supports((text-stroke: 1px var(--label-line-color)) or (-webkit-text-stroke: 1px var(--label-line-color))) {
@@ -186,7 +189,7 @@
   height: 38px;
   border: 2px solid var(--accent-color);
   background-color: transparent;
-  font-family: var(--accent-font);
+  font-family: var(--accent-font), fantasy;
   font-size: 14px;
   transition: all 0.5s;
 }
@@ -219,6 +222,7 @@
   align-items: center;
   justify-content: center;
   transition: border .3s ease;
+  margin-right: 4px;
 }
 
 .card__icon-button:focus-visible {
@@ -230,7 +234,8 @@
 }
 
 .card__like-button:focus,
-.button__save__memory:focus {
+.button__save__memory:focus,
+.window__button:focus {
   outline: none;
   box-shadow: 2px 2px 0px 0px var(--accent-color);
 }
@@ -296,24 +301,33 @@
   background-color: var(--background-color);
   outline: none;
   border: 2px solid var(--accent-color);
-  font-family: var(--accent-font);
+  font-family: var(--accent-font), fantasy;
   font-size: 14px;
 }
 
 .floppy__img {
   width: 21px;
   height: 21px;
+  margin-right: 8px;
   fill: var(--color-button-text);
-  mix-blend-mode:difference;
+  mix-blend-mode: difference;
+  
+}
+
+.window:not([open]) {
+  display: none;
+  opacity: 0;
+  pointer-events: none;
 }
 
 .window {
   width: 357px;
   background-color: var(--background-color);
-  font-family: var(--accent-font), sans-serif;
+  font-family: var(--accent-font), fantasy;
   font-size: 14px;
   padding: 30px;
   border: 2px solid var(--accent-color);
+  color: var(--accent-color);
 }
 
 .window_dialog {
@@ -339,7 +353,7 @@
 
 .window__floppy__img {
   fill: var(--accent-color);
-  width: 80px;
+  width: 90px;
   height: 40px;
 }
 
@@ -347,6 +361,7 @@
   width: 293px;
   height: 38px;
   margin-top: 30px;
+  text-transform: uppercase;
 }
 
 @media (width <= 375px) {
@@ -377,7 +392,7 @@
     flex-direction: column;
     width: 306px;
     height: 80px;
-    padding: 15px 0;
+    padding: 15px 0 13px 3px;
     justify-content: space-between;
   }
 
@@ -386,10 +401,19 @@
     height: 40px;
     margin-bottom: 8px;
   }
+
+.card__item_watermark {
+    right: 10px;
+    top: 22px;
+  }
+
+  .window__button {
+    width: 257px;
+  }
 }
 
 dialog::backdrop {
-  background-color: rgb(0 0 0 / 0.8);
+  background-color: rgb(0 0 0 / 0.75);
 }
 
 .image2 {
