--- a/styles/style.css
+++ b/styles/style.css
@@ -115,7 +115,7 @@
 .card__item {
   width: min(698px, 99%);
   background-color: var(--background-color);
-  margin: 0 auto 51px auto;
+  margin: 0 auto 49px auto;
   border: 2px solid var(--accent-color);
 }
 
@@ -162,7 +162,7 @@
 }
 
 .card__text {
-  margin: 26px;
+  margin: 27px 26px 26px 25px;
 }
 
 .card__button {
@@ -170,6 +170,7 @@
   justify-content: flex-end;
   align-items: center;
   margin: 25px;
+  gap: 3px;
 }
 
 .like-icon {
@@ -222,7 +223,7 @@
   align-items: center;
   justify-content: center;
   transition: border .3s ease;
-  margin-right: 4px;
+  padding: 0px;
 }
 
 .card__icon-button:focus-visible {
@@ -292,7 +293,7 @@
 .button__save__memory {
   position: relative;
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
   align-items: center;
   cursor: pointer;
   width: 335px;
@@ -392,7 +393,7 @@
     flex-direction: column;
     width: 306px;
     height: 80px;
-    padding: 15px 0 13px 3px;
+    padding: 15px 0 11px 3px;
     justify-content: space-between;
   }
 
@@ -400,6 +401,7 @@
     width: 40px;
     height: 40px;
     margin-bottom: 8px;
+    margin-right:4px;
   }
 
 .card__item_watermark {
@@ -409,6 +411,10 @@
 
   .window__button {
     width: 257px;
+  }
+
+  .card__item {
+    margin: 0 auto 50px auto;
   }
 }
 
